--- a/styles.css
+++ b/styles.css
@@ -40,17 +40,19 @@ body {
 
 /* Profile Picture */
 .profile-pic {
-    margin-left: 120px;
     width: 120px;
     height: 120px;
     border-radius: 50%;
     border: 4px solid rgba(0, 200, 100, 0.5);
     box-shadow: 0 0 10px rgba(0, 200, 100, 0.3);
     background-image: url('https://lh3.googleusercontent.com/pw/AP1GczPEY2lt3OjZEMxPeCEh7-Vv4qoTnQWh8BQIu1s2bkE5qJAle83X3Hbfjkx0bkPMk19Npy7shcciyORO5RGEV8ZV8ibObV0J46N6iWtTylAOFrP62bzDUAD9CbXUPmVY9TJRw7xAW9Vs7sDi-LbXFJ8K=w645-h913-s-no-gm?authuser=0');
-    background-size: cover;
-    background-size: 110%;
+    background-size: 110%; /* subtle zoom */
     background-position: center;
-    margin-bottom: 20px;
+    background-repeat: no-repeat;
+    margin: 0 auto 20px auto; /* centers on small screens */
+    display: block;
+    pointer-events: none; /* disables right click + drag */
+    user-select: none;
 }
 /*.profile-pic {
     width: 120px;
@@ -212,8 +214,9 @@ body {
     }
 
     .profile-pic {
-        width: 100px;
-        height: 100px;
+        width: 90px;
+        height: 90px;
+        background-size: 115%;
     }
 
     .info p strong {
@@ -253,7 +256,8 @@ body {
     }
 
     .profile-pic {
-        width: 90px;
-        height: 90px;
+        width: 80px;
+        height: 80px;
+        background-size: 120%;
     }
 }
